@@ -5,6 +5,7 @@ import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.network.chat.Component;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
@@ -13,18 +14,17 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.context.BlockPlaceContext;
-import net.minecraft.world.level.BlockGetter;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.LevelAccessor;
+import net.minecraft.world.level.*;
 import net.minecraft.world.level.block.*;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.StateDefinition;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.block.state.properties.BooleanProperty;
-import net.minecraft.world.level.block.state.properties.DirectionProperty;
+import net.minecraft.world.level.block.state.properties.EnumProperty;
 import net.minecraft.world.level.block.state.properties.WoodType;
 import net.minecraft.world.level.material.FluidState;
 import net.minecraft.world.level.material.Fluids;
+import net.minecraft.world.level.redstone.Orientation;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.shapes.CollisionContext;
@@ -48,7 +48,7 @@ import java.util.Objects;
  */
 public class ChairBlock extends Block implements SimpleWaterloggedBlock, SeatableBlock {
 
-    public static final DirectionProperty FACING = HorizontalDirectionalBlock.FACING;
+    public static final EnumProperty<Direction> FACING = HorizontalDirectionalBlock.FACING;
 
     public static final BooleanProperty WATERLOGGED = BlockStateProperties.WATERLOGGED;
 
@@ -90,20 +90,13 @@ public class ChairBlock extends Block implements SimpleWaterloggedBlock, Seatabl
                 .setValue(WATERLOGGED, flag);
     }
 
-    @NotNull
     @Override
-    public BlockState updateShape(@NotNull BlockState state, @NotNull Direction direction, @NotNull BlockState neighborState, @NotNull LevelAccessor level, @NotNull BlockPos currentPos, @NotNull BlockPos neighborPos) {
+    protected @NotNull BlockState updateShape(BlockState state, LevelReader level, ScheduledTickAccess tickAccess, BlockPos pos, Direction direction, BlockPos neighborPos, BlockState neighborState, RandomSource randomSource) {
         if (state.getValue(WATERLOGGED)) {
-            level.scheduleTick(currentPos, Fluids.WATER, Fluids.WATER.getTickDelay(level));
+            tickAccess.scheduleTick(pos, Fluids.WATER, Fluids.WATER.getTickDelay(level));
         }
 
-        return super.updateShape(state, direction, neighborState, level, currentPos, neighborPos);
-    }
-
-    @NotNull
-    @Override
-    public String getDescriptionId() {
-        return "block.valhelsia_furniture." + this.woodType.name() + "_chair";
+        return super.updateShape(state, level, tickAccess, pos, direction, neighborPos, neighborState, randomSource);
     }
 
     public WoodType getWoodType() {
@@ -122,7 +115,7 @@ public class ChairBlock extends Block implements SimpleWaterloggedBlock, Seatabl
             this.sitOnBlock(level, pos, player);
         }
 
-        return InteractionResult.sidedSuccess(level.isClientSide());
+        return InteractionResult.SUCCESS;
     }
 
     @Override
@@ -131,13 +124,13 @@ public class ChairBlock extends Block implements SimpleWaterloggedBlock, Seatabl
     }
 
     @Override
-    public void neighborChanged(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos, @NotNull Block block, @NotNull BlockPos fromPos, boolean isMoving) {
-       if (level.hasNeighborSignal(pos) || level.hasNeighborSignal(pos.above())) {
-           if (this.isSeatOccupied(level, pos)) {
-               level.getEntitiesOfClass(SeatEntity.class, new AABB(pos)).get(0).discard();
+    protected void neighborChanged(BlockState state, Level level, BlockPos pos, Block block, @Nullable Orientation orientation, boolean isMoving) {
+        if (level.hasNeighborSignal(pos) || level.hasNeighborSignal(pos.above())) {
+            if (this.isSeatOccupied(level, pos)) {
+                level.getEntitiesOfClass(SeatEntity.class, new AABB(pos)).getFirst().discard();
 
-               level.updateNeighbourForOutputSignal(pos, level.getBlockState(pos).getBlock());
-           }
+                level.updateNeighbourForOutputSignal(pos, level.getBlockState(pos).getBlock());
+            }
         }
     }
 
